projects/compiler/test/typechecker/invocation/error_instantiation_missing_labels.out
Error at %FILE_NAME%:3:13
Invalid instantiation
  |  val f = Foo(123, "hello")
                 ^
Calls of type constructors must include argument labels
