projects/compiler/test/typechecker/invocation/error_instantiation_missing_labels.abra
type Foo { a: Int, b: String }

val f = Foo(123, "hello")
